# Low_level_programming3

./: CMakeLists.txt  Report.docx  form.xsd  request.xsd  result.txt  test
client/: client.cpp  response_filling.cpp  response_filling.h
common/: form.cxx  form.hxx  request.cxx  request.hxx
database/: attributes.cpp  attributes.h  database.cpp  database.h  m_data.cpp  m_data.h  node.cpp  node.h  util.cpp  util.h
parse_module/: XPathparser.cpp  XPathparser.h  parser.cpp  parser.h
parse_module/structure/: comparator.cpp  comparator.h  comparator_list.cpp  comparator_list.h  compare.h  field.cpp  field.h  field_types.h  filter.cpp  filter.h  filter_list.cpp  filter_list.h  form.cpp  form.h  list_element.cpp  list_element.h  list_level.cpp  list_level.h  op.cpp  op.h  parent.h  state.h  tip.cpp  tip.h  types.h
server/: server.cpp
